compiler/tests/fail/stack_allocation/x86-64/local_stack_to_pointer.jazz
export fn f (reg ptr u64[2] r) -> reg ptr u64[2] {
  stack u64[1] a;
  a[0]=0;
  r[0:1] = a[0:1];
  return r;
}
